[package]
name = "metadata"
version = "0.1.6"
authors = ["Zhiming Wang <i@zhimingwang.org>"]
description = "Media file metadata for human consumption"
documentation = "https://docs.rs/metadata"
homepage = "https://github.com/zmwangx/metadata#readme"
repository = "https://github.com/zmwangx/metadata"
readme = "README.md"
keywords = ["ffmpeg", "multimedia", "video", "audio"]
categories = ["command-line-utilities", "multimedia"]
license = "MIT"

[lib]
name = "metadata"
path = "src/lib.rs"

[dependencies]
clap = "3.1.8"
digest = { version = "0.10.3", features = ["std"] }
env_logger = "0.9.0"
handlebars = "^3.5.5"
lazy_static = "1.4.0"
libc = "0.2.121"
log = "0.4.16"
regex = "1.5.5"
serde = "1.0.136"
sha2 = "0.10.2"
serde_derive = "1.0.136"

[dependencies.ffmpeg-next]
version = "5.0.3"
default-features = false
features = ["codec", "format"]

[dev-dependencies]
quickcheck = "0.9.2"
tempfile = "3.0.3"
